--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,56 +2,117 @@
 <html>
 	<head>
 		<title>Hores Professional</title>
+		<meta charset="utf-8">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		<!-- jQuery CDN -->
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript"></script>
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 	</head>
 	<body>
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-				<li data-target="#myCarousel" data-slide-to="3"></li>
-			</ol>
-
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner" role="listbox">
-				<div class="item active">
-					<img src="assets/img/banners/eternum.jpg" alt="Eternum">
-				</div>
-
-				<div class="item">
-					<img src="assets/img/banners/santos.jpg" alt="Chania">
-				</div>
-
-				<div class="item">
-					<img src="img_flower.jpg" alt="Flower">
-				</div>
-
-				<div class="item">
-					<img src="img_flower2.jpg" alt="Flower">
-				</div>
+		<header>
+			<div class="container">
+				<a href="/" id="logo"><img src="assets/img/logo_white.jpg" alt="logo" /></a>
 			</div>
+		</header>
+		<div class="container">
+			<div id="myCarousel" class="carousel slide" >
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
+					<li data-target="#myCarousel" data-slide-to="4"></li>
+					<li data-target="#myCarousel" data-slide-to="5"></li>
+					<li data-target="#myCarousel" data-slide-to="6"></li>
+					<li data-target="#myCarousel" data-slide-to="7"></li>
+					<li data-target="#myCarousel" data-slide-to="8"></li>
+					<li data-target="#myCarousel" data-slide-to="9"></li>
+					<li data-target="#myCarousel" data-slide-to="10"></li>
+					<li data-target="#myCarousel" data-slide-to="11"></li>
+					<li data-target="#myCarousel" data-slide-to="12"></li>
+				</ol>
 
-			<!-- Left and right controls -->
-			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<div class="carousel-caption">
+							<img class="banner-logo" src="assets/img/banners/eternum.png">
+							<p>
+								Компанията е създадена през 1924г. и 
+								специализира в създаването, производството
+								и продажбата на прибори за хранене и 
+								сервизи от неръждаема стомана. 
+								Благодарение на нашата мрежа от 
+								дистрибутори покриваме над 40 страни.
+								<a href="eternum.com" target="blank">www.eternum.com</a>
+							<p>
+						</div>
+						<img id="overlay" src="assets/img/slider_overlay.png"/>
+						<img src="assets/img/banners/eternum.jpg" alt="Eternum">
+					</div>
+					<div class="item">
+						<img id="overlay" src="assets/img/slider_overlay.png"/>
+						<img src="assets/img/banners/santos.jpg" alt="Santos">
+					</div>
+					<div class="item">
+						<img id="overlay" src="assets/img/slider_overlay.png"/>
+						<img src="assets/img/banners/beaumont.jpg" alt="Beaumont">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/bormioli_rocco.jpg" alt="Bormioli Rocco">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/cocktail_kingdom.jpg" alt="Cocktail Kingdom">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/hamilton.jpg" alt="Hamilton">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/libbey.jpg" alt="Libbey">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/pasabahce.jpg" alt="Pasabahce">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/rak.jpg" alt="Rak">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/schott.jpg" alt="Schott">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/steelite.jpg" alt="Steelite">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/supreminox.jpg" alt="Supreminox">
+					</div>
+					<div class="item">
+						<img src="assets/img/banners/utopia.jpg" alt="Utopia">
+					</div>
+				</div>
+
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+					<!-- <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span> -->
+				</a>
+				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+					<!-- <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span> -->
+				</a>
+			</div>
 		</div>
+		<footer>
+			
+		</footer>
 	</body>
 </html>
