--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,9 +31,19 @@
                 <a href="/" id="logo"><img src="assets/img/logo_white.jpg" alt="logo"/></a>
             </div>
             <div class="col-md-7">
-                <div class="row">
-                    <div class="col-md-12 contacts">
+                <div class="row contacts">
+                    <div class="col-md-9">
                         За контакт +359 886 008 044
+                    </div>
+                    <div class="col-md-3 lang">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="#">български</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="#">english</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
