--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,13 +27,20 @@
     <div id="blank-right" class="pull-right"></div>
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <a href="/" id="logo"><img src="assets/img/logo_white.jpg" alt="logo"/></a>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-8">
                 <div class="row contacts">
-                    <div class="col-md-9">
-                        За контакт +359 886 008 044
+                    <div class="col-md-4">
+                        За контакт +359 888 280 551
+                    </div>
+                    <div class="col-md-3" id="search">
+                        търсене
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                    </div>
+                    <div class="col-md-2 login">
+                        вход
                     </div>
                     <div class="col-md-3 lang">
                         <div class="row">
@@ -48,7 +55,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="navbar-header">
+                        <div class="navbar-header pull-right">
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                                 <span class="sr-only">Toggle navigation</span>
@@ -216,9 +223,9 @@
                         Водещ световен производител и дистрибутор <br/>
                         на професионално барово оборудване, <br/>
                         предлагащо широк спектър от продукти, <br/>
-                        създаден за да отговори на стандартите дори <br/>
-                        и на най-взискателните професионални <br/>
-                        бармани.
+                        създаден за да отговори на стандартите <br/>дори
+                        и на най-взискателните <br/>
+                        професионални бармани.
                         <a href="http://cocktailkingdom.com" target="blank">www.cocktailkingdom.com</a>
                     <p>
                 </div>
@@ -288,9 +295,10 @@
                         хотели, ресторанти, фреш барове и кофи <br/>
                         шопове още от 1954г. Всички продукти са <br/>
                         ръчно изработени. Едновременно с <br/>
-                        разработката на продукти с високо качество, <br/>
-                        нашата цел е да осигурим възможно <br/>
-                        най-добрия следпродажбен сервиз.
+                        разработката на продукти с високо <br/>
+                        качество, нашата цел е да осигурим  <br/>
+                        възможно най-добрия след <br/>
+                        продажбен сервиз.
                         <a href="http://santos.fr" target="blank">www.santos.fr</a>
                     <p>
                 </div>
@@ -315,37 +323,11 @@
                 <img class="overlay" src="assets/img/slider_overlay.png"/>
                 <img src="assets/img/banners/utopia.jpg" alt="Utopia">
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </div>
 
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"></a>
+        <!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>-->
+        <!--<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"></a>-->
     </div>
     <div class="row sections">
         <div class="col-md-4">
@@ -377,7 +359,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <img id="foot-logo" src="assets/img/logo_black.png">
-                        <span id="phone" class="contacts">+359 886 008 044</span>
+                        <span id="phone" class="contacts">+359 888 280 551</span>
                         <a href="mailto:hores.prof@gmail.com">
                             <span id="mail">hores.prof@gmail.com</span>
                         </a>
@@ -400,16 +382,19 @@
                                 </ul>
                             </div>
                             <div class="col-md-5">
-                                <h2>Хорес профешънал</h2>
+                                <h2>Хорес профешънъл</h2>
                                 <ul>
                                     <li><a href="#">За нас</a></li>
                                     <li><a href="#">Дистрибутори</a></li>
                                     <li><a href="#">Условия за ползване</a></li>
                                 </ul>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3 text-center">
                                 <h2>Последвай ни</h2>
                                 <a href="https://www.facebook.com/HORES-Professional-Service-1604369386485843/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+                                <a href="#" target="_blank" class="twitter"></a>
+                                <a href="#" target="_blank" class="pinterest"></a>
+
                             </div>
                         </div>
                     </div>
@@ -445,7 +430,7 @@
                     <p>
                         В най-скоро време пълната фукционалност на сайта ще бъде налична.
                         <br/>Дотогава - за повече информация позвънете на
-                        <br/>тел. <strong>+359 886 008 044</strong> .
+                        <br/>тел. <strong>+359 888 280 551</strong> .
                         <br/><br/>
                         <i>-- Екипът на HORES Professional</i>
                     </p>
