--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,7 +45,7 @@
                     <div class="col-md-3 lang">
                         <div class="row">
                             <div class="col-md-6">
-                                <a href="#">български</a>
+                                <a href="#">български<span>&nbsp;&nbsp;&nbsp;|</span></a>
                             </div>
                             <div class="col-md-6">
                                 <a href="#">english</a>
