Changed 'Bar tools' to be 'Bar Equipment'

--- a/public_html/index_en.html
+++ b/public_html/index_en.html
@@ -360,7 +360,7 @@
                                     <li><a href="#">Glassware</a></li>
                                     <li><a href="#">Porcelain</a></li>
                                     <li><a href="#">Cutlery</a></li>
-                                    <li><a href="#">Bar tools</a></li>
+                                    <li><a href="#">Bar Equipment</a></li>
                                     <li><a href="#">Melamine</a></li>
                                     <li><a href="#">Pepper and Salt Mills</a></li>
                                     <li><a href="#">Table accessories</a></li>
