--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Hores Professional</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=1024, initial-scale=0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
