Changed few text typos in BG.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -135,7 +135,7 @@
                     <img class="banner-logo" src="assets/img/banners/schott.png" alt="Schott Zwiesel">
                     <p>
                         Без значение дали става дума за лична <br/>
-                        употреба или за професионалната сфера <br/>
+                        употреба или за професионалната сфера,
                         консистенцията и фината изработка на <br/>
                         стъклените продукти ще привлекат <br/>
                         вниманието на всички. Изработката на <br/>
@@ -187,7 +187,7 @@
                 <div class="carousel-caption">
                     <img class="banner-logo" src="assets/img/banners/eternum.png" alt="Eternum">
                     <p>
-                        Компанията е създадена през 1924г. и <br/>
+                        Компанията е основана през 1924г. и <br/>
                         специализира в създаването, производството <br/>
                         и продажбата на прибори за хранене и <br/>
                         сервизи от неръждаема стомана. <br/>
@@ -237,7 +237,7 @@
                 <div class="carousel-caption">
                     <img class="banner-logo" src="assets/img/banners/beaumont.png" alt="Beaumont">
                     <p>
-                        Повече от 30 години Beaumont TM Limited <br/>
+                        Повече от 30 години компанията<br/>
                         заема челно място в дизайна и <br/>
                         производството на мерки за алкохол, <br/>
                         което я превръща в доставчик №1 <br/>
@@ -276,7 +276,7 @@
                 <div class="carousel-caption">
                     <img class="banner-logo" src="assets/img/banners/hamilton.png" alt="Hamilton Beach">
                     <p>
-                        Там където добрите идеи и добрите цени <br/>
+                        Там, където добрите идеи и добрите цени <br/>
                         се пресичат. Един от водещите дистрибутори <br/>
                         на дребни кухненски уреди. Ние сме горди, <br/>
                         че качеството на продуктите продължава да <br/>
@@ -298,8 +298,8 @@
                         ръчно изработени. Едновременно с <br/>
                         разработката на продукти с високо <br/>
                         качество, нашата цел е да осигурим <br/>
-                        възможно най-добрия след <br/>
-                        продажбен сервиз.
+                        възможно най-добрия  <br/>
+                        следпродажбен сервиз.
                         <a href="http://santos.fr" target="blank">www.santos.fr</a>
                     <p>
                 </div>
