--- a/public_html/index.html
+++ b/public_html/index.html
@@ -135,7 +135,7 @@
                     <img class="banner-logo" src="assets/img/banners/schott.png" alt="Schott Zwiesel">
                     <p>
                         Без значение дали става дума за лична <br/>
-                        употреба или за професионалната сфера,
+                        употреба или за професионалната сфера, <br/>
                         консистенцията и фината изработка на <br/>
                         стъклените продукти ще привлекат <br/>
                         вниманието на всички. Изработката на <br/>
